[gd_scene load_steps=2 format=3 uid="uid://cms57yqrnn7ga"]

[ext_resource type="Script" uid="uid://b4hnboy05hquo" path="res://UI/inv_slot.gd" id="1_d413c"]

[node name="InvSlot" type="MarginContainer"]
custom_minimum_size = Vector2(240, 120)
offset_top = 1.0
offset_right = 240.0
offset_bottom = 121.0
script = ExtResource("1_d413c")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.392157, 0.392157, 0.392157, 1)

[node name="Image" type="TextureRect" parent="Background"]
layout_mode = 0
offset_left = 10.0
offset_top = 20.0
offset_right = 90.0
offset_bottom = 100.0

[node name="EquipName" type="Label" parent="Background"]
layout_mode = 0
offset_left = 100.0
offset_top = 10.0
offset_right = 220.0
offset_bottom = 33.0
text = "Empty"

[node name="Socket1" type="Label" parent="Background"]
layout_mode = 0
offset_left = 100.0
offset_top = 40.0
offset_right = 220.0
offset_bottom = 63.0

[node name="Socket2" type="Label" parent="Background"]
layout_mode = 0
offset_left = 100.0
offset_top = 60.0
offset_right = 220.0
offset_bottom = 83.0

[node name="Socket3" type="Label" parent="Background"]
layout_mode = 0
offset_left = 100.0
offset_top = 80.0
offset_right = 220.0
offset_bottom = 103.0

[connection signal="gui_input" from="Background" to="." method="_on_background_gui_input"]
[connection signal="mouse_entered" from="Background" to="." method="_on_color_rect_mouse_entered"]
[connection signal="mouse_exited" from="Background" to="." method="_on_color_rect_mouse_exited"]
